# namebadge-c

./: CMakeLists.txt  console.sh  debug.sh  deploy.sh
src/: driver.pio  namebadge.c
